--- a/data/settings.json
+++ b/data/settings.json
@@ -2,12 +2,12 @@
   "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
-  "loading": "random",
-  "showGithub": true,
+  "loading": "loading1",
+  "showGithub": false,
   "title": "发现导航 - 精选实用导航网站",
   "description": "发现导航 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
-  "theme": "Light",
+  "theme": "Side",
   "footerContent": "",
   "iconfontUrl": "",
   "baiduStatisticsUrl": "",
@@ -21,7 +21,7 @@
     }
   ],
   "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站， 助您工作、学习和生活",
-  "simThemeHeight": 350,
+  "simThemeHeight": 100,
   "simThemeAutoplay": true,
   "sideThemeImages": [
     {
@@ -31,7 +31,7 @@
       "height": null
     }
   ],
-  "sideThemeHeight": 350,
+  "sideThemeHeight": 100,
   "sideThemeAutoplay": true,
   "shortcutThemeShowWeather": true,
   "shortcutThemeImages": [
@@ -42,7 +42,7 @@
       "height": null
     }
   ],
-  "showLanguage": true,
-  "showRate": true,
+  "showLanguage": false,
+  "showRate": false,
   "mirrorList": []
 }
