--- a/data/settings.json
+++ b/data/settings.json
@@ -2,15 +2,15 @@
   "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
-  "loading": "loading1",
-  "showGithub": false,
+  "loading": "random",
+  "showGithub": true,
   "title": "发现导航 - 精选实用导航网站",
   "description": "发现导航 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
-  "theme": "Side",
-  "footerContent": "",
-  "iconfontUrl": "",
-  "baiduStatisticsUrl": "",
+  "theme": "Light",
+  "footerContent": "<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright © 2018-2022 nav3.cn, All Rights Reserved</div>",
+  "iconfontUrl": "//at.alicdn.com/t/font_2522843_wl70o31sy6.js",
+  "baiduStatisticsUrl": "https://hm.baidu.com/hm.js?4582be7af7e7c95ef75351e07c6c32ba",
   "cnzzStatisticsUrl": "",
   "simThemeImages": [
     {
@@ -21,7 +21,7 @@
     }
   ],
   "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站， 助您工作、学习和生活",
-  "simThemeHeight": 100,
+  "simThemeHeight": 350,
   "simThemeAutoplay": true,
   "sideThemeImages": [
     {
@@ -31,7 +31,7 @@
       "height": null
     }
   ],
-  "sideThemeHeight": 100,
+  "sideThemeHeight": 350,
   "sideThemeAutoplay": true,
   "shortcutThemeShowWeather": true,
   "shortcutThemeImages": [
@@ -42,7 +42,7 @@
       "height": null
     }
   ],
-  "showLanguage": false,
-  "showRate": false,
+  "showLanguage": true,
+  "showRate": true,
   "mirrorList": []
 }
