rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,8 +1,8 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/lei-liang/nav@image/nav-1648807109030-1f89f0a5-917c-4c12-bc66-c8d4a624030a.png",
+  "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
-  "loading": "loading1",
+  "loading": "random",
   "showGithub": true,
   "title": "发现导航 - 精选实用导航网站",
   "description": "发现导航 - 精选实用导航网站",
